--- a/TicTacToe/stlye.css
+++ b/TicTacToe/stlye.css
@@ -1,15 +1,28 @@
+h1 {
+  margin: auto;
+}
+body {
+  border: 2px black solid;
+  text-align: center;
+}
 .chart {
-    border-color: black;
-    border: 10px;
-    display: grid;
-    grid-template-columns: 130px 130px 130px;
-    grid-template-rows: 130px 130px 130px;
-
+  border-color: black;
+  border: 10px;
+  display: grid;
+  grid-template-columns: 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px;
+  align-content: center;
+  margin: auto;
+  width: 50%;
+  border: 3px solid green;
+  padding: 10px;
 }
 
 .box {
-    height: 100px;
-    width: 100px;
-    color: red;
-    background-color: aqua;
+  height: 100px;
+  width: 100px;
+  color: red;
+  background-color: aqua;
+  border-radius: 20px;
+  border: 3px solid rgb(255, 0, 0);
 }
