--- a/TicTacToe/stlye.css
+++ b/TicTacToe/stlye.css
@@ -3,28 +3,37 @@ h1 {
 }
 
 body {
-    border: 2px black solid;
     text-align: center;
 }
 
 .chart {
-    border-color: black;
-    border: 10px;
+    width: 300px;
+    height: 300px;
     display: grid;
-    grid-template-columns: 100px 100px 100px;
-    grid-template-rows: 100px 100px 100px;
+    grid-template-columns: repeat(3, calc(300px / 3));
+    grid-template-rows: repeat(3, calc(300px / 3));
+    border: 10px;
     align-content: center;
     margin: auto;
-    width: 50%;
     border: 3px solid green;
-    padding: 10px;
+    padding: 20px;
 }
 
 .box {
-    height: 100px;
-    width: 100px;
     color: red;
-    background-color: aqua;
     border-radius: 20px;
+    border: 3px solid black;
+    background-color: aqua;
+    height: auto;
+    width: auto;
+}
+
+.chart div {
+    aspect-ratio: 1;
+}
+
+.reset-btn {
+    background-color: aqua;
+    padding: 10px;
     border: 3px solid black;
 }
