--- a/TicTacToe/stlye.css
+++ b/TicTacToe/stlye.css
@@ -24,6 +24,7 @@ body {
     border-radius: 20px;
     border: 3px solid black;
     background-color: aqua;
+    font-size: x-large;
     height: auto;
     width: auto;
 }
