--- a/TicTacToe/stlye.css
+++ b/TicTacToe/stlye.css
@@ -23,7 +23,7 @@ body {
     color: red;
     border-radius: 20px;
     border: 3px solid black;
-    background-color: yellow;
+    background-color: aqua;
     font-size: x-large;
     height: auto;
     width: auto;
