--- a/TicTacToe/stlye.css
+++ b/TicTacToe/stlye.css
@@ -16,7 +16,7 @@ body {
     border: 10px;
     align-content: center;
     margin: auto;
-    border: 3px solid green;
+    border: 3px solid red;
     padding: 20px;
 }
 
@@ -35,7 +35,7 @@ body {
 }
 
 .reset-btn {
-    background-color:antiquewhite;
+    background-color:;
     padding: 10px;
     border: 3px solid black;
 }
