--- a/TicTacToe/stlye.css
+++ b/TicTacToe/stlye.css
@@ -15,16 +15,20 @@ body {
     border: 10px;
     align-content: center;
     margin: auto;
-    border: 3px solid green;
+    background-color: black;
     padding: 20px;
+    border: 3px solid #fff0;
+    box-shadow: 0 0 1px navy, 0 0 2px navy, 0 0 3px navy, 0 0 4px navy;
+    
 }
 
 .box {
-    color: red;
+    color: white;
     border-radius: 20px;
-    border: 3px solid black;
-    background-color: aqua;
-    font-size: x-large;
+    background-color:rgb(2, 2, 43);
+    border: 3px solid #fff;
+    box-shadow: 0 0 4px red, 0 0 8px red, 0 0 12px red, 0 0 16px red;
+    font-size: 300%;
     height: auto;
     width: auto;
 }
@@ -34,7 +38,8 @@ body {
 }
 
 .reset-btn {
-    background-color: aqua;
+    color: white;
+    background-color: green;
+    border: 1px solid green;
     padding: 10px;
-    border: 3px solid black;
 }
